--- a/index.html
+++ b/index.html
@@ -183,11 +183,25 @@
           <div class="detalhes-projetos">Site de consulta de tempo, foi utilizado conexão com uma API, assim trazendo os dados e os apresentando, pagina responsiva.</div>
           <a href="/Tempo/index.html" target="_blank" class="link-projetos">Acessar Projeto</a>
 
+
+        </div>
+
+        <div class="card-projeto js-scroll">
+          <img src="images/tempo.png" alt="">
+          <div class="projetos-ferramentas">
+            <p class="html">HTML</p>
+            <p class="css">CSS</p>
+            <p class="javascript">JAVASCRIPT</p>
+          </div>
           <h3>Slide React</h3>
           <div class="detalhes-projetos">Site de estudo Slides em React, primeiro projeto em React que realizei.</div>
           <a href="/slides_react/index.html" target="_blank" class="link-projetos">Acessar Projeto</a>
 
+
         </div>
+
+
+
       </div>
     </div>
   </div>
